--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  posts:
+    index:
+      title: "Browse Products"
+      description: "Thank you for visiting our store. Now take out your wallet and buy something."
